styles/style.css
/* ... */
.u-list--row {
  margin-top: 1.7vh;
}

@media only screen and (min-width: 1100px) {
  .u-list--row {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
}

.u-list__item--row {
  margin-top: 1.7vh;
}

@media only screen and (min-width: 1100px) {
  .u-list__item--row {
    max-width: 25%;
    margin-top: 0;
  }
}

section {
  margin: 0 auto;
}

.section-fs {
  height: 100vh;
}

@media only screen and (min-width: 1100px) {
  .section-fs {
    margin: 6vh 0;
  }
}

.page-intro {
  min-height: 90vh;
  width: 100%;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.page-intro__text {
  margin: 3.4vh;
}

@media only screen and (min-width: 1100px) {
  .page-intro__text {
    margin: 6vh;
  }
}

.picture {
  position: relative;
}

.picture__img {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  -o-object-fit: cover;
     object-fit: cover;
  z-index: -1;
}

.wp-intro {
  opacity: 0;
  display: none;
  height: 100vh;
  background: #000;
  padding: 0;
  position: relative;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
  z-index: 200;
}

.wp-intro__headline {
  position: absolute;
  width: 100vw;
  height: 100vh;
}

.wp-intro h1 {
  position: absolute;
  margin: 0 9vw;
  opacity: 0;
}

.wp-intro__video {
  -o-object-fit: cover;
     object-fit: cover;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
}

.wp-intro__animation--first, .wp-intro__animation--third {
  bottom: 25vh;
}

.wp-intro__animation--second, .wp-intro__animation--fourth {
  top: 25vh;
}

.wp-intro__animation {
  -webkit-animation-delay: .5s;
          animation-delay: .5s;
  -webkit-animation-duration: 3s;
          animation-duration: 3s;
  -webkit-animation-name: text-fade;
          animation-name: text-fade;
  -webkit-animation-direction: alternate;
          animation-direction: alternate;
}

.wp-intro__animation--second {
  -webkit-animation-delay: 3.6s;
          animation-delay: 3.6s;
}

.wp-intro__animation--third {
  -webkit-animation-delay: 6.4s;
          animation-delay: 6.4s;
}

.wp-intro__animation--fourth {
  -webkit-animation-delay: 9.6s;
          animation-delay: 9.6s;
  -webkit-animation-duration: 3s;
          animation-duration: 3s;
  -webkit-animation-name: text-fade--end;
          animation-name: text-fade--end;
  -webkit-animation-fill-mode: forwards;
          animation-fill-mode: forwards;
}

@-webkit-keyframes text-fade {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  85% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@keyframes text-fade {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  85% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@-webkit-keyframes text-fade--end {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

@keyframes text-fade--end {
  0% {
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  100% {
    opacity: 1;
  }
}

.wp-intro--show {
  opacity: 1;
  display: block;
}

.stop-scrolling {
  height: 100vh;
  overflow-y: scroll;
  margin-left: calc(100vw - 100%);
}

.wp-intro--fade {
  -webkit-transition: opacity 0.7s;
  transition: opacity 0.7s;
}

.wp-intro__skip {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: flex-end;
  padding: 0 9vw 9vw 0;
}

@media only screen and (min-width: 1100px) {
  .wp-intro__skip {
    padding: 0 9vw 12.5vh 0;
  }
}

.wp-intro a, .wp-intro p {
  z-index: 2;
}

.wp-intro__progress {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  width: 80px;
}

.wp-intro__progress__bar {
  position: relative;
  top: 15px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 10;
      -ms-flex: 10;
          flex: 10;
  -ms-flex-preferred-size: 0;
      flex-basis: 0;
  height: 1px;
  margin: 0 5px 10px;
}

.wp-intro__progress__line {
  width: 0;
  -webkit-transition: width 11s linear;
  transition: width 11s linear;
  background: #E52025;
}

.wp-intro__slide--first {
  opacity: 0;
  -webkit-animation-delay: .6s;
          animation-delay: .6s;
  -webkit-animation-duration: 3s;
          animation-duration: 3s;
  -webkit-animation-name: text-fade;
          animation-name: text-fade;
  -webkit-animation-direction: alternate;
          animation-direction: alternate;
  -webkit-animation-iteration-count: 4;
          animation-iteration-count: 4;
}

.services {
  margin: 3.4vh;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

@media only screen and (min-width: 1100px) {
  .services {
    height: 90vh;
    margin: 6vh;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
}

.services__item {
  position: relative;
  width: 100%;
  height: 15vh;
  margin-top: 1.7vh;
  -webkit-transition: all ease-in-out 0.2s;
  transition: all ease-in-out 0.2s;
  overflow: hidden;
}
/* ... */

